--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,3 +79,11 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+.border-shape {
+    border-width: 1px;
+    --un-border-opacity: 1;
+    border-color: rgba(209,213,219,var(--un-border-opacity));
+    border-radius: 0.375rem;
+    border-style: solid;
+    box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.141);
+}
